[package]
name = "js-intern"
version = "0.2.0"
authors = ["Zac Burns <that3percent@gmail.com>"]
edition = "2018"
description = "A macro for interning JavaScript primitives"
homepage = "https://github.com/That3Percent/js-intern"
repository = "https://github.com/That3Percent/js-intern"
readme = "README.md"
keywords = ["javascript", "intern", "wasm-bindgen"]
categories = ["caching", "wasm", "web-programming"]
license = "MIT"


[dependencies]
wasm-bindgen = "0.2.40"

[dev-dependencies]
wasm-bindgen-test = "0.2.40"