[package]
name = "js-intern"
version = "0.3.1"
authors = ["Zac Burns <that3percent@gmail.com>"]
edition = "2018"
description = "A macro for interning JavaScript primitives"
homepage = "https://github.com/That3Percent/js-intern"
repository = "https://github.com/That3Percent/js-intern"
readme = "README.md"
keywords = ["javascript", "intern", "wasm-bindgen"]
categories = ["caching", "wasm", "web-programming"]
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
wasm-bindgen = "0.2.40"

[dependencies.js-intern-core]
version = "=0.3.1"
path = "lib/core"

[dependencies.js-intern-proc-macro]
version = "=0.3.1"
path = "lib/proc-macro"

[dev-dependencies]
wasm-bindgen-test = "0.2.40"