[package]
name = "js-intern-core"
version = "0.3.0"
authors = ["Zac Burns <that3percent@gmail.com>"]
edition = "2018"
description = "Internal implementation details for the js-intern crate"
homepage = "https://github.com/That3Percent/js-intern"
repository = "https://github.com/That3Percent/js-intern"
keywords = ["javascript", "intern", "wasm-bindgen"]
categories = ["caching", "wasm", "web-programming"]
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
wasm-bindgen = "0.2.40"

[dev-dependencies]
wasm-bindgen-test = "0.2.40"