[package]
name = "js-intern-proc-macro"
version = "0.3.0"
authors = ["Zac Burns <that3percent@gmail.com>"]
edition = "2018"
description = "Internal implementation details for the js-intern crate"
homepage = "https://github.com/That3Percent/js-intern"
repository = "https://github.com/That3Percent/js-intern"
keywords = ["javascript", "intern", "wasm-bindgen"]
categories = ["caching", "wasm", "web-programming"]
license = "MIT"

[lib]
proc-macro = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
quote = "0.6"
proc-macro2 = "0.4.27"

[dependencies.syn]
version = "0.15.29"
features = ['full']

[dependencies.js-intern-core]
version = "=0.3.0"
path = "../core"